[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Units/City.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Units/AlienFighter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Victory_interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UpgradesInterface.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/MainOverlay.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Defeat_interface.tscn" type="PackedScene" id=7]

[node name="MainScene" type="Spatial"]
script = ExtResource( 1 )

[node name="City" parent="." instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.0428439, 0.240999, -0.969579, -0.0106389, 0.970525, 0.240764, 0.999025, 0, 0.044145, -25.5099, 10.4697, 0 )

[node name="AlienFighter" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.7654, 24.6318 )

[node name="Victory_interface" parent="." instance=ExtResource( 4 )]

[node name="UpgradesInterface" parent="." instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 262.0
margin_top = 50.0
margin_right = 762.0
margin_bottom = 550.0

[node name="MainOverlay" parent="." instance=ExtResource( 6 )]
anchor_right = 0.0
margin_left = 262.0
margin_top = 50.0
margin_right = 762.0
margin_bottom = 550.0

[node name="Defeat_interface" parent="." instance=ExtResource( 7 )]
